Backend/k8s-manifests/manifests/airflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: airflow
  name: airflow
  # namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: airflow
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: airflow
    spec:
      containers:
        - command:
            - /entrypoint.sh
          image: hdm08/backend-airflow:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - curl
                - --fail
                - http://localhost:8080/health
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 10
          name: airflow
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            runAsGroup: 0
            runAsUser: 50000
          volumeMounts:
            - mountPath: /opt/airflow/dags
              name: airflow-cm0
            - mountPath: /opt/airflow/logs
              name: airflow-claim1
            - mountPath: /ca.pem
              name: airflow-cm2
              subPath: ca.pem
      restartPolicy: Always
      volumes:
        - configMap:
            name: airflow-cm0
          name: airflow-cm0
        - name: airflow-claim1
          persistentVolumeClaim:
            claimName: airflow-claim1
        - configMap:
            items:
              - key: ca.pem
                path: ca.pem
            name: airflow-cm2
          name: airflow-cm2
