Backend/k8s-manifests/manifests/data-api-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: data-api-service
  name: data-api-service
  # namespace: stock-pipeline
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8006
      targetPort: 8006
  selector:
    io.kompose.service: data-api-service
