Backend/k8s-manifests/manifests/data-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: data-collector
  name: data-collector
  # namespace: stock-pipeline
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: data-collector
