Backend/k8s-manifests/manifests/data-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: data-processor
  name: data-processor
 
spec:
  type: ClusterIP  
  selector:
    io.kompose.service: data-processor
  ports:
    - name: http
      port: 8001
      targetPort: 8001
