Backend/k8s-manifests/manifests/file-writer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file docker-compose.yml --out k8s-manifests
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: file-writer
  name: file-writer
 
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: file-writer
