Backend/k8s-manifests/manifests/kafka-zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  labels:
    app: kafka
    io.kompose.service: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      io.kompose.service: kafka
  template:
    metadata:
      labels:
        app: kafka
        io.kompose.service: kafka
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2181
      - name: kafka
        image: confluentinc/cp-kafka:7.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  labels:
    io.kompose.service: kafka
spec:
  selector:
    app: kafka
    io.kompose.service: kafka
  ports:
  - protocol: TCP
    port: 9092
    targetPort: 9092
  type: ClusterIP
